--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,7 +38,38 @@ if(MSVC)
 endif(MSVC)
 
 # Third-party libraries
-set(libs3rdparty freetype jpeg libart_lgpl libpng loadpng tinyxml zlib)
+set(libs3rdparty freetype libart_lgpl loadpng tinyxml)
+
+if(USE_SHARED_JPEGLIB)
+  find_package(JPEG)
+  if(JPEG_FOUND)
+    set(libs3rdparty ${libs3rdparty} ${JPEG_LIBRARIES})
+    include_directories(${JPEG_INCLUDE_DIR})
+  endif(JPEG_FOUND)
+else()
+  set(libs3rdparty ${libs3rdparty} jpeg)
+endif()
+
+if(USE_SHARED_ZLIB)
+  find_package(ZLIB)
+  if(ZLIB_FOUND)
+    set(libs3rdparty ${libs3rdparty} ${ZLIB_LIBRARIES})
+    include_directories(${ZLIB_INCLUDE_DIR})
+  endif(ZLIB_FOUND)
+else()
+  set(libs3rdparty ${libs3rdparty} zlib)
+endif()
+
+if(USE_SHARED_LIBPNG)
+  find_package(PNG)
+  if(PNG_FOUND)
+    set(libs3rdparty ${libs3rdparty} ${PNG_LIBRARIES})
+    add_definitions(${PNG_DEFINITIONS})
+    include_directories(${PNG_INCLUDE_DIR})
+  endif(PNG_FOUND)
+else()
+  set(libs3rdparty ${libs3rdparty} libpng)
+endif()
 
 # All libraries for .exe files
 set(all_libs aseprite-library gui-lib gfx-lib base-lib ${alleg_lib} ${libs3rdparty} ${sys_libs})
