Add resources_win32.rc in aseprite target on Windows.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -286,7 +286,11 @@ add_library(aseprite-library
 ######################################################################
 # aseprite application
 
-add_executable(aseprite WIN32 main.cpp)
+if(WIN32)
+  set(win32_resources resources_win32.rc)
+endif(WIN32)
+
+add_executable(aseprite WIN32 main.cpp ${win32_resources})
 
 target_link_libraries(aseprite ${aseprite-library} ${all_libs})
 
