--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -4,6 +4,7 @@
 add_library(gui-lib
   component.cpp
   event.cpp
+  frame.cpp
   jaccel.cpp
   jalert.cpp
   jbox.cpp
@@ -43,7 +44,6 @@ add_library(gui-lib
   jtooltips.cpp
   jview.cpp
   jwidget.cpp
-  jwindow.cpp
   preferred_size_event.cpp
   property.cpp
   themes/jstandard_theme.cpp)
