Add ENABLE_MEMLEAK parameter to CMakeLists.txt (fix jmem.cpp so it can be compiled when MEMLEAK is defined).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ option(USE_STATIC_ALLEGRO "Use static version of Allegro library" off)
 option(USE_SHARED_JPEGLIB "Use your installed copy of jpeglib" off)
 option(USE_SHARED_ZLIB    "Use your installed copy of zlib" off)
 option(USE_SHARED_LIBPNG  "Use your installed copy of libpng" off)
+option(ENABLE_MEMLEAK     "Enable memory-leaks detector (only for developers)" off)
 
 ######################################################################
 # Directories of third-party libraries
@@ -47,6 +48,10 @@ endif()
 # Use static Allegro library
 if(USE_STATIC_ALLEGRO)
   add_definitions(-DALLEGRO_STATICLINK)
+endif()
+
+if(ENABLE_MEMLEAK)
+  add_definitions(-DMEMLEAK)
 endif()
 
 ######################################################################
