--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,10 +10,14 @@ if(WIN32)
     User32 Shell32 ComCtl32 ComDlg32 Gdi32 Msimg32
     WinMM AdvAPI32 Ole32 ShLwApi Vfw32 WinInet PsApi
     DDraw DxGuid DSound DInput8)
+
+  if(MSVC AND ENABLE_MEMLEAK)
+    set(sys_libs ${sys_libs} dbghelp)
+  endif()
+
 else()
   # Pthreads
-  set(sys_libs ${sys_libs}
-    pthread)
+  set(sys_libs ${sys_libs} pthread)
 
   # Allegro library on Unix like systems
   find_program(allegro_config "allegro-config")
